--- a/food-client/src/app/scss/_variables.scss
+++ b/food-client/src/app/scss/_variables.scss
@@ -1,3 +1,5 @@
-$primary-color: blue;
-$secondary-color: red;
-$text-color: white;
+$primary-color: #18BA51;
+$secondary-color: #ee7711;
+$text-color: #5a5a5a;
+$bg-default: #f0c537;
+$bg-gray: #f7f7f7;
