--- a/food-client/src/app/scss/_mixin.scss
+++ b/food-client/src/app/scss/_mixin.scss
@@ -1,16 +1,16 @@
-// @mixin button-bg($bg){
-//     background: $bg;
-//     color: white;
-//     &:hover{
-//         background: darken($bg, 10%);
-//         transition: all 0.3s ease;
-//     }
-//     &:active {
-//         background: darken($bg, 25%);
-//     }
-// }
-
-// @mixin background-color(){
-//     padding: 10px;
-//     background-color: $bg;
-// }
+@mixin button-bg($bg) {
+    background: $bg;
+    color: white;
+    &:hover {
+      background: darken($bg, 8%);
+      transition: all 0.3s ease;
+    }
+    &:active {
+      background: darken($bg, 25%);
+    }
+  }
+  
+  @mixin background-color($bg) {
+    padding: 10px;
+    background-color: $bg;
+  }
